# aiotraq

./: .gitignore  LICENSE  Makefile  README.md  api-client-config.yaml  pyproject.toml
.github/: labeler.yml  release.yml
.github/actions/poetry_setup/: action.yml
.github/workflows/: _lint.yml  _test_release.yml  ci.yml  deploy.yml  pr-auto-approve.yml  pr-labeler.yml  release.yml  test-deploy.yml
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: intro.md
docs/docs/api/: bot-event.md  bot.md  client.md
docs/docs/guides/: _category_.json  app-example.md  bot.md  client.md  message.md  ns-deploy.md
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
examples/: .env.example  README.md  api.py  httpbot.py  message.py  webhook.py
libs/aiotraq/: Makefile  README.md  pyproject.toml
libs/aiotraq/aiotraq/: __init__.py
libs/aiotraq/aiotraq/api/activity/: get_activity_timeline.py  get_online_users.py
libs/aiotraq/aiotraq/api/authentication/: get_my_external_accounts.py  get_my_sessions.py  link_external_account.py  login.py  logout.py  revoke_my_session.py  unlink_external_account.py
libs/aiotraq/aiotraq/api/bot/: activate_bot.py  change_bot_icon.py  connect_bot_ws.py  create_bot.py  delete_bot.py  edit_bot.py  get_bot.py  get_bot_icon.py  get_bot_logs.py  get_bots.py  get_channel_bots.py  inactivate_bot.py  let_bot_join_channel.py  let_bot_leave_channel.py  reissue_bot.py
libs/aiotraq/aiotraq/api/channel/: create_channel.py  edit_channel.py  edit_channel_subscribers.py  edit_channel_topic.py  get_channel.py  get_channel_events.py  get_channel_pins.py  get_channel_stats.py  get_channel_subscribers.py  get_channel_topic.py  get_channel_viewers.py  get_channels.py  get_messages.py  set_channel_subscribers.py
libs/aiotraq/aiotraq/api/clip/: clip_message.py  create_clip_folder.py  delete_clip_folder.py  edit_clip_folder.py  get_clip_folder.py  get_clip_folders.py  get_clips.py  unclip_message.py
libs/aiotraq/aiotraq/api/file/: delete_file.py  get_file.py  get_file_meta.py  get_files.py  get_thumbnail_image.py  post_file.py
libs/aiotraq/aiotraq/api/group/: add_user_group_admin.py  add_user_group_member.py  change_user_group_icon.py  create_user_group.py  delete_user_group.py  edit_user_group.py  edit_user_group_member.py  get_user_group.py  get_user_group_admins.py  get_user_group_members.py  get_user_groups.py  remove_user_group_admin.py  remove_user_group_member.py
libs/aiotraq/aiotraq/api/me/: add_my_star.py  add_my_user_tag.py  change_my_icon.py  change_my_notify_citation.py  change_my_password.py  edit_me.py  get_me.py  get_my_channel_subscriptions.py  get_my_icon.py  get_my_notify_citation.py  get_my_qr_code.py  get_my_stars.py  get_my_unread_channels.py  get_my_user_tags.py  get_my_view_states.py  get_oidc_user_info.py  get_user_settings.py  read_channel.py  register_fcm_device.py  remove_my_star.py  set_channel_subscribe_level.py
libs/aiotraq/aiotraq/api/message/: add_message_stamp.py  create_pin.py  delete_message.py  edit_message.py  get_direct_messages.py  get_message.py  get_message_clips.py  get_message_stamps.py  get_pin.py  post_direct_message.py  post_message.py  post_stamp.py  remove_message_stamp.py  remove_pin.py  search_messages.py
libs/aiotraq/aiotraq/api/notification/: ws.py
libs/aiotraq/aiotraq/api/oauth2/: create_client.py  delete_client.py  edit_client.py  get_client.py  get_clients.py  get_my_tokens.py  get_o_auth_2_authorize.py  post_o_auth_2_authorize.py  post_o_auth_2_authorize_decide.py  post_o_auth_2_token.py  revoke_my_token.py  revoke_o_auth_2_token.py
libs/aiotraq/aiotraq/api/ogp/: delete_ogp_cache.py  get_ogp.py
libs/aiotraq/aiotraq/api/public/: get_public_user_icon.py  get_server_version.py
libs/aiotraq/aiotraq/api/stamp/: change_stamp_image.py  create_stamp.py  create_stamp_palette.py  delete_stamp.py  delete_stamp_palette.py  edit_stamp.py  edit_stamp_palette.py  get_my_stamp_history.py  get_stamp.py  get_stamp_image.py  get_stamp_palette.py  get_stamp_palettes.py  get_stamp_stats.py  get_stamps.py
libs/aiotraq/aiotraq/api/user/: add_user_tag.py  change_user_icon.py  change_user_password.py  create_user.py  edit_user.py  edit_user_tag.py  get_user.py  get_user_dm_channel.py  get_user_icon.py  get_user_stats.py  get_user_tags.py  get_users.py  remove_user_tag.py
libs/aiotraq/aiotraq/api/user_tag/: edit_my_user_tag.py  get_tag.py  remove_my_user_tag.py
libs/aiotraq/aiotraq/api/webhook/: change_webhook_icon.py  create_webhook.py  delete_webhook.py  edit_webhook.py  get_webhook.py  get_webhook_icon.py  get_webhook_messages.py  get_webhooks.py  post_webhook.py
libs/aiotraq/aiotraq/api/webrtc/: get_web_rtc_state.py  post_web_rtc_authenticate.py
libs/aiotraq/aiotraq/models/: __init__.py  active_o_auth_2_token.py  activity_timeline_message.py  bot.py  bot_detail.py  bot_event_log.py  bot_event_result.py  bot_mode.py  bot_state.py  bot_tokens.py  bot_user.py  change_stamp_image_body.py  channel.py  channel_event.py  channel_event_type.py  channel_list.py  channel_stats.py  channel_stats_stamp.py  channel_stats_user.py  channel_subscribe_level.py  channel_topic.py  channel_view_state.py  channel_viewer.py  child_created_event.py  clip_folder.py  clipped_message.py  dm_channel.py  external_provider_user.py  file_info.py  file_info_thumbnail_type_0.py  forced_notification_changed_event.py  get_channel_events_order.py  get_clips_order.py  get_direct_messages_order.py  get_files_order.py  get_messages_order.py  get_notify_citation.py  get_stamps_type.py  get_webhook_messages_order.py  login_session.py  (+99 more)
libs/bot/: README.md  pyproject.toml
libs/bot/aiotraq_bot/: __init__.py  bot.py
libs/bot/aiotraq_bot/models/: __init__.py  common.py  event.py  event_models.py
libs/message/: README.md  pyproject.toml
libs/message/aiotraq_message/: __init__.py  engine.py  manager.py  message.py  utils.py
templates/aiotraq/: README.md.jinja  package_init.py.jinja  pyproject.toml.jinja  pyproject_mypy.toml.jinja  pyproject_ruff.toml.jinja
(+14 files in other folders)
