[tool.poetry]
name = "aiotraq"
version = "0.1.1"
description = "Async ready traQ API Client"
authors = ["toshi00"]
license = "MIT"
readme = "README.md"
packages = [{ include = "aiotraq" }]
include = ["aiotraq/py.typed"]
repository = "https://github.com/toshi-pono/aiotraq"
keywords = ["traQ", "API", "async", "httpx"]


[tool.poetry.urls]
"Source Code" = "https://github.com/toshi-pono/aiotraq/tree/main/libs/aiotraq"


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
httpx = ">=0.20.0,<0.28.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
types-python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = [".venv", "venv", "__pycache__", ".git"]

line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10
