[tool.poetry]
name = "aiotraq"
version = "0.2.5"
description = "Async ready traQ API Client"
authors = ["toshi00"]
license = "MIT"
readme = "README.md"
packages = [{ include = "aiotraq" }]
include = ["aiotraq/py.typed"]
repository = "https://github.com/toshi-pono/aiotraq"
keywords = ["traQ", "API", "async", "httpx"]


[tool.poetry.urls]
"Source Code" = "https://github.com/toshi-pono/aiotraq/tree/main/libs/aiotraq"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
httpx = ">=0.20.0,<0.28.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"

[tool.poetry.group.dev.dependencies]
types-python-dateutil = "^2.8.0"
mypy = "^1.10.0"
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = false
check_untyped_defs = true

[tool.ruff]
exclude = [".venv", "venv", "__pycache__", ".git"]

line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10
