[tool.poetry]
name = "aiotraq-message"
version = "0.2.1"
description = "aiotraq Plugin that supports interactive message sending using Streamlit-style syntax for traQ"
authors = ["toshi00"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/toshi-pono/aiotraq"
packages = [{ include = "aiotraq_message" }]
include = ["aiotraq_message/py.typed"]
keywords = ["traQ", "bot", "message", "aiotraq"]


[tool.poetry.urls]
"Source Code" = "https://github.com/toshi-pono/aiotraq/tree/main/libs/message"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiotraq = "^0.1.2"
aiotraq-bot = "^0.1.2"
pillow = "^10.3.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true


[tool.ruff]
exclude = [".venv", "venv", "__pycache__", ".git"]

line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10
